--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
     <NavMenu />
     
     <main>
-        <article class="content px-4">
+        <article class="rz-p-0 rz-p-md-10">
             @Body
         </article>
     </main>
